--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "watermarkjs-web",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c"
